<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.MainActivity">


    <TextView
        style="@style/introduction"
        android:text="@string/introduction" />

    <Button
        android:id="@+id/btnGlobal"
        style="@style/entryButton"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_btn"
        android:onClick="onClick"
        android:text="@string/global_info" />

    <Button
        android:id="@+id/btnConsultar"
        style="@style/entryButton"
        android:background="@drawable/rounded_btn"
        android:onClick="onClick"
        android:text="@string/consultar_algo" />

</LinearLayout>
